2002-12-12  Paul Swartz <z3p@twistedmatrix.com>

	* twisted/conch/pamauth.py: added, gives support for authentication
	using PAM.

	* twisted/conch/*: support for the keyboard-interactive authentication
	method which uses PAM.

2002-12-12  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/python/log.py: add setStdout, set logfile to NullFile by
	default. 

2002-12-11  Donovan Preston <dp@twistedmatrix.com>

	* Added new woven example, Hello World.

	* Updated woven howto to talk about Hello World. TODO: Finish refactoring
	woven quotes example, then write more advanced woven howtos on writing
	Widgets and InputHandlers.

2002-12-11  Paul Swartz <z3p@twistedmatix.com>

	* twisted/conch/*: enabled 'exec' on the server, disabled core dumps,
	and some fixes

2002-12-10  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/*: many fixes to conch server, now works and can run
	as root.

	* twisted/conh/ssh/session.py: fix root exploit where a python shell was
	left acessable to anyone.

2002-12-10  Cory Dodt  <corydodt@yahoo.com>

	* t/scripts/postinstall.py: new.  Create shortcut icons on win32.

	* twisted-post-install.py: new.  Runs t/scripts/postinstall.py

	* setup.py: copy twisted-post-install.py during install_scripts

2002-12-09  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/internet/app.py: actually set the euid/egid if users ask

2002-12-09  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_conch.py: wait for ssh process to finish

	* twisted/scripts/postinstall.py: fix indentation

	* twisted/conch/identity.py: fix indentation

2002-12-09  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/ssh/transport.py: don't accept host keys by default
	because it's a huge security hole.

2002-12-09  Dave Peticolas  <dave@krondo.com>

	* twisted/enterprise/util.py: handle None as null

	* twisted/internet/interfaces.py: add missing 'self' argument

2002-12-08  Dave Peticolas  <dave@krondo.com>
